.tooling/eleventy/assets/css/style.css
/* ... */
.static-article h1, h2 {
    padding-bottom: 6px;
    border-bottom: 1px solid var(--docs-border-color);
}

.static-article h1 {
    font-size: 32px;
}

.static-article p {
    padding-top: 6px;
    padding-bottom: 6px;
}

.static-article pre {
    padding: 12px;
    background: var(--docs-secondary-background-color) !important;
    margin-bottom: 6px;
}

.static-article pre.language-html * {
    font-size: 13px;
    font-family: monospace;
}

.static-article blockquote {
    border-left: 5px solid var(--docs-secondary-background-color);
    margin-top: 12px;
    padding-left: 6px;
    color: var(--docs-static-blockquote-color);
}

.subheading {
    --mediumdark: '#999999';
    font-weight: 900;
    font-size: 13px;
    color: var(--omni-theme-font-color);
    letter-spacing: 6px;
    line-height: 24px;
    text-transform: uppercase;
    margin-bottom: 12px;
    margin-top: 40px;
}

.link-list {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
    row-gap: 10px;
}

@media (min-width: 620px) {
    .link-list {
        row-gap: 20px;
        column-gap: 20px;
        grid-template-columns: 1fr 1fr;
    }
}

@media all and (-ms-high-contrast: none) {
    .link-list {
        display: -ms-grid;
        display: grid;
        -ms-grid-columns: 1fr 1fr;
        -ms-grid-rows: 1fr 1fr;
    }
}

.link-item {
    display: block;
    padding: 20px 30px 20px 15px;
    border: 1px solid #00000010;
    border-radius: 5px;
    transition: background 150ms ease-out, border 150ms ease-out, transform 150ms ease-out;
    color: var(--omni-theme-font-color);
    display: flex;
    align-items: flex-start;
    cursor: pointer;
}

.link-item > * {
    cursor: pointer;
}

.link-item:hover {
    border-color: #1ea7fd50;
    transform: translate3d(0, -3px, 0);
    box-shadow: rgba(0, 0, 0, 0.08) 0 3px 10px 0;
}

.link-item:active {
    border-color: #1ea7fd;
    transform: translate3d(0, 0, 0);
}

.link-item strong {
    font-weight: 700;
    display: block;
    margin-bottom: 2px;
}

.link-item img,
.link-item svg {
    height: 40px;
    width: 40px;
    margin-right: 15px;
    flex: none;
    color: var(--omni-theme-font-color,inherit);
    text-decoration: none;
}

.link-item span {
    font-size: 14px;
    line-height: 20px;
    color: var(--omni-theme-font-color,inherit);
    text-decoration: underline;
}

/* COMPONENTS */

.component {
    display: none;
}

.component-overlay {
    /* position: fixed; */
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: calc(100vh - 60px);
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--omni-theme-background-color);
    z-index: 2;
}

.component-meta {
    position: relative;
    z-index: 4;
    padding: 24px 48px;
    background-color: var(--docs-secondary-background-color);
}

.component-name {
    font-size: 32px;
    line-height: 1.2;
    font-weight: 600;
    margin-bottom: 6px;
}

.component-desc {
    margin-bottom: 12px;
    color: var(--omni-theme-font-color);
}

.component-framework-toggle {
    color: var(--omni-theme-font-color);
    display: flex;
    border-width: 1px;
    border-style: solid;
    border-radius: 6px;
    border-color: var(--omni-theme-primary-color);
    width: fit-content;
}

.component-framework-toggle > * {
    padding-left: 5px;
    padding-right: 5px;
    cursor: pointer;
}

.component-framework-toggle > .selected-framework {
    background-color: var(--omni-theme-primary-color);
    color:  var(--omni-theme-background-color);
}

.component-framework-toggle > *:not(:last-child) {
    border-right-width: 1px;
    border-right-style: solid;
    border-right-color: var(--omni-theme-primary-color);
}

.component-info {
    display: flex;
    flex-direction: column;
    color: var(--omni-theme-font-color);
    /* background-color: lightblue; */
}

.component-info-item {
    display: flex;
    flex-direction: row;
    margin: 6px 0;
}

.component-info-item > div:first-child {
    width: 100px;
}

.component-info-item-code {
    align-items: center;
    display: flex;
    overflow-y: auto;
}

.component-info-item-code .copy-icon {
    font-size: 16px; 
    cursor: pointer; 
    margin-left: 12px;
    opacity: 50%;
    -webkit-user-select: none;
    user-select: none;
}

.component-info-item-code .copy-icon:hover {
  opacity: 100%;
}

.component-info-item-code .copy-icon:active {
  transform: translate(0, 0) scale(0.9);
}

.component-info-item-code .no-code-scroll > span,
.component-info-item-code .no-code-scroll {
    white-space: pre;
}

.component-info-item-link,
.component-info-item-link:visited {
    display: flex;
    color: var(--omni-theme-font-color);
    text-decoration: none;
    cursor: pointer;
    align-items: center;
}

.component-info-item-link:hover {
    text-decoration: underline;
}

.component-info-item-img {
    width: 16px;
    height: 16px;
    margin-right: 12px;
    cursor: pointer;
}

.component-info-item-copy {
    font-size: 16px;
    color: var(--omni-theme-font-color);
}

.component-tab-container {
    position: relative;
    z-index: 1;
    background-color: var(--docs-secondary-background-color);
    box-shadow: none;
    /* padding-bottom: 80px; */
}

.component-tab-root {
    flex-direction: row;
}

.component-tab-wrapper {
    border-bottom: 1px solid var(--docs-border-color);
    padding: 0 48px;
}

.component-tab-list {
    display: flex;
    flex-flow: row;
    -webkit-box-pack: start;
    justify-content: flex-start;
    margin-left: auto;
    margin-right: auto;
    border-bottom: 0;
    margin-bottom: -1px;
    overflow-x: auto;
}
/* ... */

